@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.4 2000-12-07 11:43:03 maire Exp $
+# $Id: GNUmakefile,v 1.5 2001-02-21 14:00:33 maire Exp $
 # --------------------------------------------------------------
 # GNUmakefile for examples module.  Gabriele Cosmo, 06/04/98.
 # --------------------------------------------------------------
@@ -15,5 +15,13 @@ endif
 all: lib bin
 
 include $(G4INSTALL)/config/architecture.gmk
+
+G4NOHIST := true
+ifdef G4NOHIST
+  CPPFLAGS += -DG4NOHIST
+else
+  LDFLAGS  += -L$(CERN)/pro/lib
+  LOADLIBS += -lpacklib $(FCLIBS)
+endif
 
 include $(G4INSTALL)/config/binmake.gmk
