@@ -6,7 +6,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em1TrackingAction.cc,v 1.4 2000-12-07 11:43:04 maire Exp $
+// $Id: Em1TrackingAction.cc,v 1.5 2001-02-21 14:00:35 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -18,6 +18,10 @@
 #include "Em1RunAction.hh"
 
 #include "G4Track.hh"
+ 
+#ifndef G4NOHIST
+ #include "CLHEP/Hist/HBookFile.h"
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -38,6 +42,10 @@ void Em1TrackingAction::PostUserTrackingAction(const G4Track* aTrack)
   if (aTrack->GetDefinition()->GetPDGCharge() == 0.)
        {runAction->CountTraks0(1); runAction->CountSteps0(nbSteps);}
   else {runAction->CountTraks1(1); runAction->CountSteps1(nbSteps);
+#ifndef G4NOHIST  
+        runAction->GetHisto(0)->accumulate(Trleng);
+        runAction->GetHisto(1)->accumulate((float)nbSteps);
+#endif	
   }    
 }
 
